name:               coordinate
version:            0.1.2
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (c) 2016, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           A representation of latitude and longitude
category:           Development
description:       
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  A representation of latitude and longitude
homepage:           https://github.com/data61/coordinate
bug-reports:        https://github.com/data61/coordinate/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog.md, other-licence.md

source-repository   head
  type:             git
  location:         git@github.com:data61/coordinate.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base >= 4 && < 5
                    , lens >= 4.0 && < 5.0
                    , transformers >= 0.4 && < 0.6
                    , papa >= 0.1.0 && < 0.2
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Geodetic
                    Data.Geodetic.ECEF
                    Data.Geodetic.Ellipsoid
                    Data.Geodetic.EllipsoidReaderT
                    Data.Geodetic.HasDoubles
                    Data.Geodetic.LLH
                    Data.Geodetic.LL
                    Data.Geodetic.Sphere
                    Data.Geodetic.XY

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
